# walltz

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  flake.nix  image_supplier.toml
src/: category.rs  cli.rs  collections.rs  config.rs  finder.rs  image.rs  image_supplier.rs  lib.rs  main.rs  state.rs
src/cli/: collections.rs  fetch.rs  get.rs  set.rs
src/cli/collections/: create.rs  delete.rs  from.rs  list.rs  save.rs  sync.rs  use_collection.rs
src/image/: cache.rs  url_supplier.rs
src/image_supplier/: url_supplier.rs
