[package]
name = "walltz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
indicatif = { version = "0.17.8", features = ["tokio"] }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.10.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["rng", "v4"] }
xdg = "2.5.2"
